proyect 2: Google Authentication Added

--- a/proyect1_Publicaciones/Pages/Publications/Index.cshtml
+++ b/proyect1_Publicaciones/Pages/Publications/Index.cshtml
@@ -21,12 +21,14 @@
     int hash = User.Identity.GetHashCode();
 }
 
+
 @if (Model.Publicaciones.Count() > 0)
 {
     <br />
     <div class="card">
         <div class="card-header">
             @User.Identity.Name
+            @User.Identity.GetHashCode();
         </div>
         <div class="card-body">
             <blockquote class="blockquote mb-0">
